# meetingbot

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
app/: config.py  main.py
app/agents/: base.py  minutes_agent.py  orchestrator.py  qa_agent.py  task_agent.py
app/agents/tools/: graph_tool.py  planner_tool.py  search_tools.py  sharepoint_tool.py  web_search_tool.py
app/integrations/: graph_client.py  planner.py  sharepoint.py
app/models/: minutes.py  session.py
app/rag/: document_processor.py  org_kb_indexer.py  retriever.py  web_search.py
app/storage/: blob_client.py  cosmos_client.py
app/transcription/: speech_client.py  transcript_buffer.py
app/utils/: auth.py  document_generator.py  logging.py
infra/: deploy.sh  main.bicep  parameters.json
scripts/: index_org_kb.py  local_meeting.py
tests/integration/: conftest.py  test_meeting_flow.py  test_rag.py  test_speech.py
tests/unit/: test_minutes_agent.py  test_orchestrator.py  test_qa_agent.py  test_task_agent.py  test_transcript_buffer.py
